On small devices we do not want the panel to be less than 200px anyway, so remove that calculation. Hopefully fixes https://github.com/jitsi/jitsi-meet/issues/335#issuecomment-181144547

--- a/css/videolayout_default.css
+++ b/css/videolayout_default.css
@@ -3,9 +3,7 @@
     position: absolute;
     top: 0px;
     left: 0px;
-    right: 0 !important;
     overflow-x: hidden;
-    width: 100% !important;
 }
 
 #remoteVideos {
